--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ const flexJson =
               },
               {
                 "type": "text",
-                "text": "Thanin Pongyakate",
+                "text": "Pholarthon Tantimontaporn",
                 "wrap": true,
                 "size": "sm",
                 "color": "#666666",
@@ -119,7 +119,7 @@ const flexJson =
               },
               {
                 "type": "text",
-                "text": "Senior Sales",
+                "text": "Bu Manager Fluke",
                 "wrap": true,
                 "color": "#666666",
                 "size": "sm",
